--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,30 +34,31 @@ jobs:
       - name: Install Turbo
         run: npm install -g turbo
 
-      # 3️⃣ Install dependencies
-      - name: Install dependencies
-        run: npm install -g pnpm && pnpm install
 
       # 4️⃣ Turbo prune only the app we want
       - name: Turbo prune app
         run: turbo prune --scope=${{ matrix.app.scope }} --docker --out-dir=out
 
-      # 5️⃣ Build Docker image for the pruned app
-      - name: Build Docker image
-        run: |
-          docker build \
-            --cache-from ipkiller/${{ matrix.app.image }}:latest \
-            -f apps/${{ matrix.app.path }}/Dockerfile \
-            -t ipkiller/${{ matrix.app.image }}:latest \
-            out
+    # ls out/full to verify
+      - name: List pruned files
+        run: ls out
 
-      # 6️⃣ Login to DockerHub
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # # 5️⃣ Build Docker image for the pruned app
+      # - name: Build Docker image
+      #   run: |
+      #     docker build \
+      #       --cache-from ipkiller/${{ matrix.app.image }}:latest \
+      #       -f apps/${{ matrix.app.path }}/Dockerfile \
+      #       -t ipkiller/${{ matrix.app.image }}:latest \
+      #       out
 
-      # 7️⃣ Push Docker image
-      - name: Push Docker image
-        run: docker push ipkiller/${{ matrix.app.image }}:latest
+      # # 6️⃣ Login to DockerHub
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # # 7️⃣ Push Docker image
+      # - name: Push Docker image
+      #   run: docker push ipkiller/${{ matrix.app.image }}:latest
