--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-node_modules
+**node_modules
 .pnp
 .pnp.js
-**uploads
-**out
+**/uploads/
+**/out/
 
-**logs
+**/logs/
 
 # Local env files
-**.env
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+**/.env
 
 # Testing
 coverage
@@ -28,9 +23,9 @@ coverage
 
 # Build Outputs
 .next/
-out/
-build
-dist
+**/out/
+**/build/
+**/dist/
 
 
 # Debug
