--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,26 +38,24 @@ jobs:
       - name: Turbo prune app
         run: turbo prune --scope=${{ matrix.app.scope }} --docker --out-dir=out
 
-      # ls out/full to verify
-      - name: List pruned files
-        run: ls out
-
-      #  5️⃣ Build Docker image for the pruned app
-      # - name: Build Docker image
-      #   run: |
-      #     docker build \
-      #       --cache-from ipkiller/${{ matrix.app.image }}:latest \
-      #       -f apps/${{ matrix.app.path }}/Dockerfile \
-      #       -t ipkiller/${{ matrix.app.image }}:latest \
-      #       out
-
-      # # 6️⃣ Login to DockerHub
+      # 6️⃣ Login to DockerHub
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
       #   with:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_PASSWORD }}
 
+
+      # 5️⃣ Build Docker image for the pruned app
+      - name: Build Docker image
+        run: |
+          docker build \
+            --cache-from ipkiller/${{ matrix.app.image }}:latest \
+            -f apps/${{ matrix.app.path }}/Dockerfile \
+            -t ipkiller/${{ matrix.app.image }}:latest \
+            out
+
+    
       # # 7️⃣ Push Docker image
       # - name: Push Docker image
       #   run: docker push ipkiller/${{ matrix.app.image }}:latest
