--- a/packages/schema/ecom-schema/package.json
+++ b/packages/schema/ecom-schema/package.json
@@ -14,11 +14,13 @@
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
     "cheack-types": "tsc --noEmit"
   },
-  "dependencies": {
+  "devDependencies": {
     "@config/eslint": "workspace:^",
     "@config/ts": "workspace:^",
+    "eslint": "^9.39.2"
+  },
+  "dependencies": {
     "@schema/common": "workspace:^",
-    "eslint": "^9.39.2",
     "zod": "^4.1.13"
   }
 }
