--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,65 +1,87 @@
-name: CI/CD Monorepo
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
-  build-and-deploy:
+  detect:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        app:
-          - name: web-admin
-            scope: "@web/ecom-admin"
-            path: "web/ecom-admin"
-            image: "admin"
-          # - name: backend
-          #   scope: "@backend/ecom"
-          #   path: "backend/ecom-api"
-          #   image: "backend"
-
-    env:
-      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM_ID: ${{ secrets.TURBO_TEAM_ID }}
+    outputs:
+      matrix: ${{ steps.matrix.outputs.matrix }}
 
     steps:
-      # 1️⃣ Checkout repo
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node & Turbo
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
+      - name: Get affected packages
+        run: |
+          turbo run build --affected --output=json > changes.json
 
-      - name: Install Turbo
-        run: npm install -g turbo
+      - name: Build matrix
+        id: matrix
+        run: |
+          ALLOWED='["@web/ecom-admin","@backend/ecom"]'
 
-      # 3 Turbo prune only the app we want
-      - name: Turbo prune app
-        run: turbo prune --scope=${{ matrix.app.scope }} --docker --out-dir=out
+          MATRIX=$(jq -c --argjson allowed "$ALLOWED" '
+            .packages.items
+            | map(
+                select(.name as $n | $allowed | index($n))
+                | {
+                    scope: .name,
+                    image: (.name | split("/")[-1] | gsub("^ecom-"; ""))
+                  }
+              )
+          ' changes.json)
 
-      #6️⃣ Login to DockerHub
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
+
+  build:
+    needs: detect
+    if: needs.detect.outputs.matrix != '[]'
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        app: ${{ fromJson(needs.detect.outputs.matrix) }}
+
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-      # 5️⃣ Build Docker image for the pruned app
-      - name: Build Docker image
+      - name: Enable pnpm
+        run: corepack enable
+
+      - name: Turbo prune
         run: |
-          docker build \
-            --cache-from ipkiller/${{ matrix.app.image }}:latest \
-            -f apps/${{ matrix.app.path }}/Dockerfile \
-            -t ipkiller/${{ matrix.app.image }}:latest \
-            out
+          turbo prune \
+            --scope=${{ matrix.app.scope }} \
+            --docker \
+            --out-dir=pruned
 
-    
-      # # 7️⃣ Push Docker image
-      - name: Push Docker image
-        run: docker push ipkiller/${{ matrix.app.image }}:latest
+      - name: Pull cache image if exists
+        run: |
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/${{ matrix.app.image }}
+          docker pull $IMAGE:latest || true
+
+      - name: Docker build
+        run: |
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/${{ matrix.app.image }}
+
+          docker build \
+            -f pruned/Dockerfile \
+            -t $IMAGE:${{ github.sha }} \
+            -t $IMAGE:latest \
+            --cache-from=$IMAGE:latest \
+            --build-arg TURBO_TOKEN=${{ secrets.TURBO_TOKEN }} \
+            --build-arg TURBO_TEAM=${{ secrets.TURBO_TEAM }} \
+            pruned
+
+      - name: Push images
+        run: |
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/${{ matrix.app.image }}
+
+          docker push $IMAGE:${{ github.sha }}
+          docker push $IMAGE:latest
