--- a/apps/backend/ecom-api/package.json
+++ b/apps/backend/ecom-api/package.json
@@ -2,14 +2,14 @@
   "name": "@backend/ecom",
   "version": "1.0.0",
   "description": "A modern e-commerce platform with product listings, cart, and checkout features",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "repository": "https://github.com/Ipkiller/OneStop",
   "author": "Amrit Singh",
   "license": "MIT",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch ./index.ts ",
     "build": "tsc -b && tsc-alias",
     "start": "node dist/index.js",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
@@ -32,9 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "multer": "^2.0.2",
-    "nanoid": "^5.1.6",
-    "sharp": "^0.34.4",
-    "zod": "4.1.5"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@config/eslint": "workspace:^",
@@ -49,6 +47,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "eslint": "^9.33.0",
+    "knip": "^5.73.4",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.9.3",
