--- a/packages/types/common/package.json
+++ b/packages/types/common/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@config/ts": "workspace:^"
   }
 }
