--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,15 +14,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Enable pnpm
-        run: corepack enable
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.0.0 --activate
 
       - name: Get affected packages
         run: |
-          pnpm turbo run build --affected --output=json > changes.json
+          pnpm dlx turbo run build --affected --output=json > changes.json
 
       - name: Build matrix
         id: matrix
@@ -65,7 +69,9 @@ jobs:
           node-version: 20
 
       - name: Enable pnpm
-        run: corepack enable
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.0.0 --activate
 
       - name: Turbo prune
         run: |
