--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,7 @@ jobs:
           TURBO_VERSION=$(pnpm script -tv ./pnpm-lock.yaml)
           echo "Installing Turbo $TURBO_VERSION"
           npm install -g "turbo@$TURBO_VERSION"
+          turbo --version
       - name: log turbo version
         run: turbo --version
 
