--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,9 +23,8 @@ jobs:
         run: |
           TURBO_VERSION=$(pnpm script -tv ./pnpm-lock.yaml)
           echo "Installing Turbo $TURBO_VERSION"
-          echo $TURBO_VERSION
-          npm install -g "turbo@$TURBO_VERSION"
-          turbo --version
+
+          pnpm exec turbo --version
       - name: log turbo version
         run: turbo --version
 
