Adding scripts to Actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,8 +18,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          run: |
-            npm install -g pnpm
+
+      - name: Install pnpm globally
+        run: npm install -g pnpm
 
       - name: Install Turbo
         run: |
