Adding scripts to Actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Turbo
         run: |
-          pnpm install turbo --wokspace-root
+          pnpm add turbo
 
       - name: log turbo version
         run: turbo --version
