--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Turbo
         run: |
-          pnpm add turbo
+          pnpm add turbo -w
 
       - name: log turbo version
         run: turbo --version
