--- a/apps/web/ecom-admin/package.json
+++ b/apps/web/ecom-admin/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.6.1",
     "@schema/ecom": "workspace:^",
+    "@scripts/deploy": "workspace:^",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.2",
